monty working (hacky) -- fix later

--- a/kernel-timer/Makefile
+++ b/kernel-timer/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-OBJS = lib/timer.o lib/LPerm.o lib/Phi.o lib/Gamma.o lib/NTLib.o lib/Util.o
+OBJS = lib/timer.o lib/LPerm.o lib/Phi.o lib/Gamma.o lib/NTLib.o lib/Util.o lib/Monty.o
 H_FILES = src/timer.h src/LPerm.h src/Phi.h src/Gamma.h src/Util.h src/NTLib.h
 FLAGS = -O3 
 SOURCES = $(wildcard src/gen/*.c) # match anything that looks like gen/*.c
@@ -21,6 +21,8 @@ lib/LPerm.o: src/LPerm.c
 lib/Util.o: src/Util.c
 	$(CC) $(FLAGS) -o $@ -c $^
 lib/NTLib.o: src/NTLib.c
+	$(CC) $(FLAGS) -o $@ -c $^
+lib/Monty.o: src/Monty.c
 	$(CC) $(FLAGS) -o $@ -c $^
 
 
