--- a/tcg/tcg.cabal
+++ b/tcg/tcg.cabal
@@ -25,23 +25,55 @@ executable tcg
     Algebra.PolyRings,
     Compile.CompileKernel,
     Interface.PolyMult,
-    --Search.CodeGen,
     Search.GeneticCode,
     Search.Genetic,
     Search.Search,
-    Util.Logger,
     Compile.KernelToFieldAST,
     Compile.PathToC,
     Compile.Compilers,
     Compile.CAST,
     Compile.FAST,
+    Compile.Monty,
     Util.Util,
-    Util.KernelTimer,
-    Test.TestCode,
-    Test.NTT_Test,
-    Test.Fourier_Test,
-    Test.KernelToFieldAST_Test,
-    Test.PathToC_Test
+    Util.Logger,
+    Util.KernelTimer
+  build-depends:
+       base,
+       mtl >=2.2.2,
+       containers >= 0.6.0.1,
+       matrix >= 0.3.6.1,
+       random >= 1.2.1.1,
+       process >= 1.6.3.0,
+       regex-posix >= 0.96.0.1,
+       random-shuffle >= 0.0.4,
+       transformers >= 0.6.1.0,
+       hashable >= 1.4.2.0,
+       hspec >= 2.7,
+       hspec-discover >= 2.7
+  hs-source-dirs: src
+  default-language:    Haskell2010
+
+executable tcg-benchmark
+  main-is:             Benchmark.hs
+  other-modules:
+    Algebra.FField,
+    Algebra.Fourier,
+    Algebra.NTT,
+    Algebra.PolyRings,
+    Compile.CompileKernel,
+    Interface.PolyMult,
+    Search.GeneticCode,
+    Search.Genetic,
+    Search.Search,
+    Compile.KernelToFieldAST,
+    Compile.PathToC,
+    Compile.Compilers,
+    Compile.CAST,
+    Compile.FAST,
+    Compile.Monty,
+    Util.Util,
+    Util.Logger,
+    Util.KernelTimer
   build-depends:
        base,
        mtl >=2.2.2,
