--- a/kernel-timer/Makefile
+++ b/kernel-timer/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
-OBJS = lib/timer.o lib/LPerm.o lib/Phi.o lib/Gamma.o lib/NTLib.o lib/Util.o lib/Monty.o
-H_FILES = src/timer.h src/LPerm.h src/Phi.h src/Gamma.h src/Util.h src/NTLib.h
+OBJS = lib/timer.o lib/LPerm.o lib/Phi.o lib/Gamma.o lib/NTLib.o lib/Util.o lib/Monty.o lib/Multiply.o
+H_FILES = src/timer.h src/LPerm.h src/Phi.h src/Gamma.h src/Util.h src/NTLib.h src/Mutliply.h
 FLAGS = -O3 
 SOURCES = $(wildcard src/gen/*.c) # match anything that looks like gen/*.c
 TARGETS = $(patsubst src/gen%.c,bin%,$(SOURCES))
@@ -24,6 +24,9 @@ lib/NTLib.o: src/NTLib.c
 	$(CC) $(FLAGS) -o $@ -c $^
 lib/Monty.o: src/Monty.c
 	$(CC) $(FLAGS) -o $@ -c $^
+lib/Multiply.o: src/Multiply.c
+	$(CC) $(FLAGS) -o $@ -c $^
+
 
 
 clean:
