--- a/tcg/tcg.cabal
+++ b/tcg/tcg.cabal
@@ -56,7 +56,8 @@ executable tcg
        transformers >= 0.6.1.0,
        hashable >= 1.4.2.0,
        hspec >= 2.7,
-       hspec-discover >= 2.7
+       hspec-discover >= 2.7,
+       sort >= 1.0.0.0
   hs-source-dirs: src
   default-language:    Haskell2010
 
