--- a/kernel-timer/Makefile
+++ b/kernel-timer/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 OBJS = lib/timer.o lib/LPerm.o lib/Phi.o lib/Gamma.o lib/NTLib.o lib/Util.o lib/Monty.o lib/Multiply.o lib/Generic.o
 H_FILES = src/timer.h src/LPerm.h src/Phi.h src/Gamma.h src/Util.h src/NTLib.h src/Mutliply.h
-FLAGS = -O3 
+FLAGS = -O3 -fopenmp
 SOURCES = $(wildcard src/gen/*.c) # match anything that looks like gen/*.c
 TARGETS = $(patsubst src/gen%.c,bin%,$(SOURCES))
 
